--- a/src/main/resources/assets/chiselsandbits/lang/en_us.json
+++ b/src/main/resources/assets/chiselsandbits/lang/en_us.json
@@ -60,12 +60,10 @@
   "mod.chiselsandbits.chiselmode.line4": "4 x 4",
   "mod.chiselsandbits.chiselmode.line8": "8 x 8",
   "mod.chiselsandbits.chiselmode.plane": "Plane",
-  "mod.chiselsandbits.chiselmode.plane1": "1 x 1",
-  "mod.chiselsandbits.chiselmode.plane2": "2 x 2",
-  "mod.chiselsandbits.chiselmode.plane4": "4 x 4",
+  "mod.chiselsandbits.chiselmode.plane1": "1 x 1\n  \"mod.chiselsandbits.chiselmode.plane2\": \"2 x 2\",\n  \"mod.chiselsandbits.chiselmode.plane4\": \"4 x 4\",",
   "mod.chiselsandbits.chiselmode.plane8": "8 x 8",
   "mod.chiselsandbits.chiselmode.connected_plane": "Connected Plane",
-  "mod.chiselsandbits.chiselmode.connected_material": "Connected Material",
+  "mod.chiselsandbits.chiselmode.connected_material": "Extrude",
   "mod.chiselsandbits.chiselmode.cubed": "Cube",
   "mod.chiselsandbits.chiselmode.cube_small": "Small",
   "mod.chiselsandbits.chiselmode.cube_medium": "Medium",
@@ -75,8 +73,35 @@
   "mod.chiselsandbits.chiselmode.sphere_small": "1/4",
   "mod.chiselsandbits.chiselmode.sphere_medium": "1/2",
   "mod.chiselsandbits.chiselmode.sphere_large": "Full",
-  "mod.chiselsandbits.bitoption.place": "Place",
-  "mod.chiselsandbits.bitoption.replace": "Replace",
+  "mod.chiselsandbits.chiselmode.replace": "Replace",
+  "mod.chiselsandbits.chiselmode.multiline.single": "Single\nBit",
+  "mod.chiselsandbits.chiselmode.multiline.snap": "Grid\nSnapped\nCube",
+  "mod.chiselsandbits.chiselmode.multiline.sphere": "Sphere",
+  "mod.chiselsandbits.chiselmode.multiline.snap2": "1/8",
+  "mod.chiselsandbits.chiselmode.multiline.snap4": "1/4",
+  "mod.chiselsandbits.chiselmode.multiline.snap8": "1/2",
+  "mod.chiselsandbits.chiselmode.multiline.line": "Line",
+  "mod.chiselsandbits.chiselmode.multiline.line1": "1 x 1",
+  "mod.chiselsandbits.chiselmode.multiline.line2": "2 x 2",
+  "mod.chiselsandbits.chiselmode.multiline.line4": "4 x 4",
+  "mod.chiselsandbits.chiselmode.multiline.line8": "8 x 8",
+  "mod.chiselsandbits.chiselmode.multiline.plane": "Plane",
+  "mod.chiselsandbits.chiselmode.multiline.plane1": "1 x 1",
+  "mod.chiselsandbits.chiselmode.multiline.plane2": "2 x 2",
+  "mod.chiselsandbits.chiselmode.multiline.plane4": "4 x 4",
+  "mod.chiselsandbits.chiselmode.multiline.plane8": "8 x 8",
+  "mod.chiselsandbits.chiselmode.multiline.connected_plane": "Connected\nPlane",
+  "mod.chiselsandbits.chiselmode.multiline.connected_material": "Extrude",
+  "mod.chiselsandbits.chiselmode.multiline.cubed": "Cube",
+  "mod.chiselsandbits.chiselmode.multiline.cube_small": "Small",
+  "mod.chiselsandbits.chiselmode.multiline.cube_medium": "Medium",
+  "mod.chiselsandbits.chiselmode.multiline.cube_large": "Large",
+  "mod.chiselsandbits.chiselmode.multiline.drawn_region": "Drawn\nRegion",
+  "mod.chiselsandbits.chiselmode.multiline.same_material": "Same\nMaterial",
+  "mod.chiselsandbits.chiselmode.multiline.sphere_small": "1/4",
+  "mod.chiselsandbits.chiselmode.multiline.sphere_medium": "1/2",
+  "mod.chiselsandbits.chiselmode.multiline.sphere_large": "Full",
+  "mod.chiselsandbits.chiselmode.multiline.replace": "Replace",
   "mod.chiselsandbits.chisel.support.already-chiseled": "Chiseling: Already Chiseled!",
   "mod.chiselsandbits.chisel.support.not.supported.generic": "Chiseling: Not supported - Unknown",
   "mod.chiselsandbits.chisel.support.supported.code": "Chiseling: Supported - Via code",
@@ -201,109 +226,6 @@
   "commands.setbit.cannotChiselBlock": "Block cannot be chiseled.",
   "commands.setbit.invalidState": "Invalid Bit Type",
   "commands.setbit.spaceOccupied": "Bit cannot be placed space is occupied",
-  "mod.chiselsandbits.config.maxUndoLevel": "Max Undo Level",
-  "mod.chiselsandbits.config.persistCreativeClipboard": "Save/Load Creative Clipboard Contents",
-  "mod.chiselsandbits.config.fluidBitsAreClickThrough": "Click through Fluid Bits.",
-  "mod.chiselsandbits.config.addBrokenBlocksToCreativeClipboard": "Add Broken Blocks to Creative clipboard",
-  "mod.chiselsandbits.config.creativeClipboardSize": "Creative Clip Board Size",
-  "mod.chiselsandbits.config.creativeClipboardSize.tooltip": "Number of items that can be stored on the creative clipboard before they begin to be removed, 0 will disable it.",
-  "mod.chiselsandbits.config.ShowBitsInJEI": "Show Bits in JEI",
-  "mod.chiselsandbits.config.maxDrawnRegionSize": "Max Drawn Region Size",
-  "mod.chiselsandbits.config.showUsage": "Add help text to item descriptions",
-  "mod.chiselsandbits.config.invertBitBagFullness": "Invert damage bar on bit-bag.",
-  "mod.chiselsandbits.config.enableChiselMode_Plane": "Enable Mode - Plane",
-  "mod.chiselsandbits.config.enableChiselMode_ConnectedPlane": "Enable Mode - Connected Plane",
-  "mod.chiselsandbits.config.enableChiselMode_ConnectedMaterial": "Enable Mode - Connected Material",
-  "mod.chiselsandbits.config.enableChiselMode_SameMaterial": "Enable Mode - Same Material",
-  "mod.chiselsandbits.config.enableChiselMode_Line": "Enable Mode - Line",
-  "mod.chiselsandbits.config.enableChiselMode_SmallCube": "Enable Mode - Small Cube",
-  "mod.chiselsandbits.config.enableChiselMode_LargeCube": "Enable Mode - Large Cube",
-  "mod.chiselsandbits.config.enableChiselMode_MediumCube": "Enable Mode - Medium Cube",
-  "mod.chiselsandbits.config.enableChiselMode_DrawnRegion": "Enable Mode - Drawn Region",
-  "mod.chiselsandbits.config.enableChiselMode_Snap2": "Enable Mode - Grid Snapped 1/8 Cube",
-  "mod.chiselsandbits.config.enableChiselMode_Snap4": "Enable Mode - Grid Snapped 1/4 Cube",
-  "mod.chiselsandbits.config.enableChiselMode_Snap8": "Enable Mode - Grid Snapped 1/2 Cube",
-  "mod.chiselsandbits.config.enablePositivePatternMode_Additive": "Enable Mode - Additive",
-  "mod.chiselsandbits.config.enablePositivePatternMode_Impose": "Enable Mode - Impose",
-  "mod.chiselsandbits.config.enablePositivePatternMode_Placement": "Enable Mode - Placement",
-  "mod.chiselsandbits.config.enablePositivePatternMode_Replace": "Enable Mode - Replace",
-  "mod.chiselsandbits.config.enableTapeMeasure_Bit": "Enable Mode - Bit",
-  "mod.chiselsandbits.config.enableTapeMeasure_Block": "Enable Mode - Block",
-  "mod.chiselsandbits.config.enableTapeMeasure_Distance": "Enable Mode - Distance",
-  "mod.chiselsandbits.config.enableToolbarIcons": "Show mode icon for chisel in tool bar",
-  "mod.chiselsandbits.config.perChiselMode": "Store selected mode per chisel",
-  "mod.chiselsandbits.config.chatModeNotification": "Notify mode changes with chat",
-  "mod.chiselsandbits.config.itemNameModeDisplay": "Notify mode changes with tool highlight",
-  "mod.chiselsandbits.config.dynamicModelFaceCount": "Max faces for static render",
-  "mod.chiselsandbits.config.dynamicModelFaceCount.tooltip": "Models more complicated than this will use dynamic rendering.",
-  "mod.chiselsandbits.config.dynamicModelRange": "Max Distance for dynamic render",
-  "mod.chiselsandbits.config.dynamicModelRange.tooltip": "Dynamically rendered blocks outside of this range will not render.",
-  "mod.chiselsandbits.config.dynamicModelMinimizeLatancy": "Minimize Latency for dynamic renders",
-  "mod.chiselsandbits.config.dynamicModelMinimizeLatancy.tooltip": "Disabling can improve performance at the cost of responsiveness.",
-  "mod.chiselsandbits.config.dynamicMaxConcurrentTessalators": "Maximum Number of Concurrent Updates",
-  "mod.chiselsandbits.config.dynamicMaxConcurrentTessalators.tooltip": "When this number is exceeded updates will begin pausing to prevent memory saturation.",
-  "mod.chiselsandbits.config.damageTools": "Tools take damage",
-  "mod.chiselsandbits.config.enablePositivePrintCrafting": "Crafting with Positive Chisel Design",
-  "mod.chiselsandbits.config.enablePositivePrintCrafting.tooltip": "Crafting a positive design with bits/bags of bits will let you craft the block.",
-  "mod.chiselsandbits.config.enableStackableCrafting": "Craft Chiseled Blocks to Remove Rotation",
-  "mod.chiselsandbits.config.enableStackableCrafting.tooltip": "You can use this feature to stack the same design by stripping the rotation.",
-  "mod.chiselsandbits.config.enableNegativePrintInversionCrafting": "Invert Negative Chisel Designs",
-  "mod.chiselsandbits.config.enableNegativePrintInversionCrafting.tooltip": "Craft a filled negative design with a blank negative design.",
-  "mod.chiselsandbits.config.enableBitBag": "Enable Chiseled Bit Bag",
-  "mod.chiselsandbits.config.enableNegativePrint": "Enable Negative Chisel Design",
-  "mod.chiselsandbits.config.enablePositivePrint": "Enable Positive Chisel Design",
-  "mod.chiselsandbits.config.enableMirrorPrint": "Enable Mirror Chisel Design",
-  "mod.chiselsandbits.config.enableChisledBits": "Enable Chiseled Bits",
-  "mod.chiselsandbits.config.enableStoneChisel": "Enable Stone Chisel",
-  "mod.chiselsandbits.config.enableIronChisel": "Enable Iron Chisel",
-  "mod.chiselsandbits.config.enableGoldChisel": "Enable Golden Chisel",
-  "mod.chiselsandbits.config.enableDiamondChisel": "Enable Diamond Chisel",
-  "mod.chiselsandbits.config.enableWoodenWrench": "Enable Wooden Wrench",
-  "mod.chiselsandbits.config.enableChiselToolHarvestCheck": "Check tool types / levels for chisels",
-  "mod.chiselsandbits.config.enableChiselToolHarvestCheck.tooltip": "To harvest obsidian bits you require a dimaond chisel.",
-  "mod.chiselsandbits.config.enableChiselToolHarvestCheckTools": "Tool types emulated by chisels",
-  "mod.chiselsandbits.config.enableToolHarvestLevels": "Check tool level when breaking blocks",
-  "mod.chiselsandbits.config.enableToolHarvestLevels.tooltip": "Breaking an primary obsidian chiseled block will require a diamond level tool.",
-  "mod.chiselsandbits.config.enableBitLightSource": "Chiseled blocks can emit light",
-  "mod.chiselsandbits.config.enableBitLightSource.tooltip": "When disabled light emiting bits will simply glow and the block will emit no light level.",
-  "mod.chiselsandbits.config.bitLightPercentage": "Percentage of block for max light level",
-  "mod.chiselsandbits.config.compatabilityMode": "Enhance Mod compatibility",
-  "mod.chiselsandbits.config.enableAPITestingItem": "Enable API Testing Item",
-  "mod.chiselsandbits.config.bagStackSize": "Bit Bag - Bit Stack Size",
-  "mod.chiselsandbits.config.bagStackSize.tooltip": "Stack size of bits in the bag: Minimum of 64, maximum of 99,999",
-  "mod.chiselsandbits.config.stoneChiselUses": "Stone Chisel Uses",
-  "mod.chiselsandbits.config.ironChiselUses": "Iron Chisel Uses",
-  "mod.chiselsandbits.config.diamondChiselUses": "Diamond Chisel Uses",
-  "mod.chiselsandbits.config.goldChiselUses": "Gold Chisel uses",
-  "mod.chiselsandbits.config.wrenchUses": "Wrench Uses",
-  "mod.chiselsandbits.config.logEligibilityErrors": "Log Exceptions when calculating Eligibility",
-  "mod.chiselsandbits.config.disableCustomVertexFormats": "Disable Using Custom Vertex Formats",
-  "mod.chiselsandbits.config.enableModelCompression": "Compress Vertex Data In Memory",
-  "mod.chiselsandbits.config.useGetLightValue": "Use Get Light Value to get light value of blocks.",
-  "mod.chiselsandbits.config.enableFaceLightmapExtraction": "Use Model Analysis to get Lightmap Data.",
-  "mod.chiselsandbits.config.enableRightClickModeChange": "Cycle Chisel mode on right click",
-  "mod.chiselsandbits.config.enableSetBitCommand": "Enable /setbit Command",
-  "mod.chiselsandbits.config.maxMillisecondsPerBlock": "Max Milliseconds Per Block",
-  "mod.chiselsandbits.config.maxMillisecondsUploadingPerFrame": "Max Milliseconds Uploading/Cycle",
-  "mod.chiselsandbits.config.maxTapeMeasures": "Max Tape Measures",
-  "mod.chiselsandbits.config.displayMeasuringTapeInChat": "Display Measuring Tape In Chat",
-  "mod.chiselsandbits.config.defaultToDynamicRenderer": "Default To Dynamic Renderer",
-  "mod.chiselsandbits.config.forceDynamicRenderer": "Disable Static Renderer",
-  "mod.chiselsandbits.config.useVBO": "Use VBOs",
-  "mod.chiselsandbits.config.defaultToDynamicRenderer.tooltip": "By default Chisels and Bits uses the static renderer, and changes to the Dynamic Renderer on update, This setting reverse that\n After determining the detail of the model it will decide to revert to the static renderer, helpful for more complicated scenes that cause stalls when using the static renderer.",
-  "mod.chiselsandbits.config.forceDynamicRenderer.tooltip": "Debug Setting, that disable the static render entirely.",
-  "mod.chiselsandbits.config.useVBO.tooltip": "By Default uses the same setting as MC, but can be overridden.",
-  "mod.chiselsandbits.config.blacklistTickingBlocks": "Black List Ticking Blocks",
-  "mod.chiselsandbits.config.radialMenuVolume": "'Click' volume for radial menu.",
-  "mod.chiselsandbits.config.radialMenuVolume.tooltip": "Setting to Zero will disable it.",
-  "mod.chiselsandbits.config.enableVivecraftCompatibility": "Enable Vivecraft Compatibility",
-  "mod.chiselsandbits.config.enableChiselCrafting": "Enable Chiseling Blocks in Crafting Table",
-  "mod.chiselsandbits.config.dynamicRenderFullChunksOnly": "Dynamic Renderer Full Chunks Only",
-  "mod.chiselsandbits.config.dynamicRenderFullChunksOnly.tooltip": "Prevents Subdividing of dynamically rendered chunks into single blocks. This increases performance for most common cases ( chunks with a handful of complicated blocks ), but decreases performance for the worst cases ( chunks full of super complicated designs ).",
-  "mod.chiselsandbits.config.requireBagSpace": "Require Inventory/Bag Space",
-  "mod.chiselsandbits.config.requireBagSpace.tooltip": "Requires there to be an empty slot in a bag or in the player's inventory before allowing them to use the chisel.",
-  "mod.chiselsandbits.config.voidExcessBits": "Void Excess Bits",
-  "mod.chiselsandbits.config.voidExcessBits.tooltip": "Voids any bits that couldn't be fit into a bag or your inventory. Improves server performance. The undo action could have issues as some bits are voided.",
   "mod.chiselsandbits.chisel.station.name": "Chisel Station",
   "mod.chiselsandbits.chisel.station.help": "Allows mass production of a single material chiseled pattern.",
   "mod.chiselsandbits.chisel.station.help.long": "Allows you to mass produce a single pattern multiple times. However only allows a single material to be used, replacing any exiting material in the pattern.",
