Add a full block chisel mode under the grid snapped category.

--- a/src/main/resources/assets/chiselsandbits/lang/en_us.json
+++ b/src/main/resources/assets/chiselsandbits/lang/en_us.json
@@ -70,6 +70,7 @@
   "mod.chiselsandbits.chiselmode.cube_small": "Small",
   "mod.chiselsandbits.chiselmode.cube_medium": "Medium",
   "mod.chiselsandbits.chiselmode.cube_large": "Large",
+  "mod.chiselsandbits.chiselmode.cube_full": "Full Block",
   "mod.chiselsandbits.chiselmode.drawn_region": "Drawn Region",
   "mod.chiselsandbits.chiselmode.same_material": "Same Material",
   "mod.chiselsandbits.chiselmode.sphere_small": "1/4",
@@ -98,6 +99,7 @@
   "mod.chiselsandbits.chiselmode.multiline.cube_small": "Small",
   "mod.chiselsandbits.chiselmode.multiline.cube_medium": "Medium",
   "mod.chiselsandbits.chiselmode.multiline.cube_large": "Large",
+  "mod.chiselsandbits.chiselmode.multiline.cube_full": "Full\nBlock",
   "mod.chiselsandbits.chiselmode.multiline.drawn_region": "Drawn\nRegion",
   "mod.chiselsandbits.chiselmode.multiline.same_material": "Same\nMaterial",
   "mod.chiselsandbits.chiselmode.multiline.sphere_small": "1/4",
