Implement a modular radial menu. Implement a change tracker control widget. Allow leaves to be chiseled. Rework the screens. Remove the old radial tool mode selection screen.

--- a/src/main/resources/assets/chiselsandbits/lang/en_us.json
+++ b/src/main/resources/assets/chiselsandbits/lang/en_us.json
@@ -244,6 +244,17 @@
   "mod.chiselsandbits.advancements.make-tank.title": "Row row row the boat",
   "mod.chiselsandbits.advancements.make-tank.description": "Get fluid bits by using a bit tank.",
   "mod.chiselsandbits.container.bit_bag": "BitBag",
+  "mod.chiselsandbits.ui-components.tool-menu.group-selector.name": "Primary Group Selector",
+  "mod.chiselsandbits.ui-components.tool-menu.mode-selector.name": "Primary Mode Selector",
+  "mod.chiselsandbits.ui-components.tool-menu.page-selector.name": "Page selector",
+  "mod.chiselsandbits.ui-components.tool-menu.page-selector.next.name": "Next",
+  "mod.chiselsandbits.ui-components.tool-menu.page-selector.previous.name": "Previous",
+  "mod.chiselsandbits.ui-components.tool-menu.selector.name": "Mode Selector for %s",
+  "mod.chiselsandbits.ui-screens.tool-menu.name": "Tool Mode Selector for: %s",
+  "mod.chiselsandbits.ui-components.change-tracker.operations.clear.name": "Clear the ChangeTracker",
+  "mod.chiselsandbits.ui-components.change-tracker.operations.name": "ChangeTracker operations",
+  "mod.chiselsandbits.ui-components.change-tracker.operations.redo.name": "Redo last Change",
+  "mod.chiselsandbits.ui-components.change-tracker.operations.undo.name": "Undo last Change",
   "chiselsandbits.measurements.lengths.block": "%s Blks.",
   "chiselsandbits.measurements.lengths.bit": "%s Bits.",
   "chiselsandbits.measurements.owners.you": "By you!",
