Massive amount of bugfixes.

--- a/Common/src/main/resources/assets/chiselsandbits/lang/en_us.json
+++ b/Common/src/main/resources/assets/chiselsandbits/lang/en_us.json
@@ -166,9 +166,9 @@
   "mod.chiselsandbits.help.tape_measure": "{} and drag to measure, again {} to save\n{} to clear\nUse {} to display menu.",
   "mod.chiselsandbits.help.magnifying_glass": "Hover over block to check if compatible.",
   "mod.chiselsandbits.help.chiseled_block.long": "Left-click to place the block. Sneak while placing to ignore block grid. Shift + Mouse Wheel to cycle placement rotation.",
-  "mod.chiselsandbits.help.bit_bag.long": "Automatically re-stocks, and store bits when you exceed or go under a stack in your inventory.\\n\\nCraft with any dye to color.",
+  "mod.chiselsandbits.help.bit_bag.long": "Automatically re-stocks, and store bits when you exceed or go under a stack in your inventory.\n\nCraft with any dye to color.",
   "mod.chiselsandbits.help.wrench.long": "Right-click blocks to rotate them around the axis of the face you click.",
-  "mod.chiselsandbits.help.tape_measure.long": "Left-click to and drag to measure spaces. Sneak Use to remove previously created measurements. Use the menu to switch between measurement modes.",
+  "mod.chiselsandbits.help.tape_measure.long": "Left-click to and drag to measure spaces.\nSneak Use to remove previously created measurements.\nUse the menu to switch between measurement modes.",
   "mod.chiselsandbits.help.magnifying_glass.long": "This item allows for the analysis of blocks in the world. It allows you by hovering over a block to see, why a block is supported by Chisels and Bits or why not.",
   "mod.chiselsandbits.help.bit.long": "Left-click to chisel the highlighted area. Right-click to place at the designated area.",
   "mod.chiselsandbits.help.positiveprint.long": "Right-click on a chiseled block to write the design. Right-click on a block to chisel it adding and removing any bits that do not match the design. You can also place the design in a crafting table and Craft with bits/bags. Shift + Mouse Wheel can be used to cycle rotations without moving.",
@@ -189,7 +189,7 @@
   "mod.chiselsandbits.help.reallytrash": "Click again to confirm deletion of all",
   "mod.chiselsandbits.help.reallytrash_blank": "Click again to confirm deletion of %s",
   "mod.chiselsandbits.help.trash.invalid": "Cannot delete %s",
-  "mod.chiselsandbits.help.pattern.sealed": "A sealed pattern. Created by applying a sealant on a simple pattern.\nCan be used multiple times",
+  "mod.chiselsandbits.help.pattern.sealed": "A sealed pattern.\nCreated by applying a sealant on a simple pattern.\nCan be used multiple times",
   "mod.chiselsandbits.help.pattern.sealed.long": "",
   "mod.chiselsandbits.help.pattern.simple": "A simple chiseled block pattern.\nCan only be used once, but is modifiable.\nCreated by writing down the pattern with a quill while looking at a chiseled block.",
   "mod.chiselsandbits.help.pattern.simple.long": "",
