Add the monocle. Add zooming capability when holding the monocle Fix remaining shadow issues

--- a/Common/src/main/resources/assets/chiselsandbits/lang/en_us.json
+++ b/Common/src/main/resources/assets/chiselsandbits/lang/en_us.json
@@ -46,6 +46,7 @@
   "item.chiselsandbits.quill": "Quill",
   "item.chiselsandbits.sealant": "Sealant",
   "item.chiselsandbits.unseal": "Sealant remover",
+  "item.chiselsandbits.monocle": "Monocle",
   "mod.chiselsandbits.creative-tab.clipboard.name": "Chisels & Bits Clipboard",
   "mod.chiselsandbits.chiselmode.mode": "Chisel Mode: %s",
   "mod.chiselsandbits.chiselmode.mode_grouped": "Chisel Mode: %1$s (%2$s)",
@@ -292,6 +293,7 @@
   "mod.chiselsandbits.keys.key.measuring-tape.reset": "Reset measuring tape measurements",
   "mod.chiselsandbits.keys.key.undo": "Undo last chiseling operation",
   "mod.chiselsandbits.keys.key.redo": "Redo last undone chiseling operation",
+  "mod.chiselsandbits.keys.key.zoom": "Zoom with monocle",
   "mod.chiselsandbits.test": "Placeholder text during development",
   "mod.chiselsandbits.pattern.modification.group.mirror": "Mirror",
   "mod.chiselsandbits.pattern.modification.group.rotate": "Rotate",
@@ -320,6 +322,7 @@
   "mod.chiselsandbits.config.performance.caches.sizes.block-faces.comment": "Size of the model face cache.",
   "mod.chiselsandbits.config.performance.caches.sizes.block-models.comment": "Size of the block model cache.",
   "mod.chiselsandbits.config.performance.caches.sizes.collision-boxes.comment": "Size of the collision box cache.",
+  "mod.chiselsandbits.config.performance.caches.sizes.stack-models.comment": "Size of the item stack model cache.",
   "mod.chiselsandbits.config.performance.lighting.comment": "Lighting related options.",
   "mod.chiselsandbits.config.performance.lighting.extract-lighting-values-from-blockstates.comment": "Should C&B pull lighting values from blockstates.",
   "mod.chiselsandbits.config.performance.lighting.extract-lighting-values-from-faces.comment": "Should C&B pull lighting values from model faces.",
