--- a/Common/src/main/resources/assets/chiselsandbits/lang/en_us.json
+++ b/Common/src/main/resources/assets/chiselsandbits/lang/en_us.json
@@ -344,5 +344,10 @@
   "mod.chiselsandbits.config.settings.clipboard.addBrokenBlocks.comment": "When set to true this adds broken chiseled blocks to the creative clipboard.",
   "mod.chiselsandbits.config.settings.clipboard.addPickedBlocks.comment": "When set to true this adds picked chiseled blocks to the creative clipboard.",
   "mod.chiselsandbits.config.style.comment": "Configures the different gameplay style options.",
-  "mod.chiselsandbits.config.style.bit-size.comment": "Configures the size of a single bit, relative to one block."
+  "mod.chiselsandbits.config.style.bit-size.comment": "Configures the size of a single bit, relative to one block.",
+  "mod.chiselsandbits.config.performance.saving.thread-count.comment": "The thread count used during saving and compressing of data from chiseled block entity.",
+  "mod.chiselsandbits.config.settings.chiseling-previews.debug.enabled.comment": "Indicates if the debug rendering in chiseling and placement previews should be enabled.",
+  "mod.chiselsandbits.config.settings.chiseling-previews.debug.mutator.colors.chiseling.comment": "The color of the chiseling mutation area in the chiseling preview.",
+  "mod.chiselsandbits.config.settings.chiseling-previews.debug.mutator.colors.placement.comment": "The color of the placement mutation area in the placement preview.",
+  "mod.chiselsandbits.config.settings.patterns.export-path.comment": "The path where exported patterns should be saved.",
 }
