--- a/Common/src/main/resources/assets/chiselsandbits/lang/en_us.json
+++ b/Common/src/main/resources/assets/chiselsandbits/lang/en_us.json
@@ -357,5 +357,11 @@
   "mod.chiselsandbits.chisel.attempt.failed.no-placeable-bit-held": "You are not holding a placeable bit.",
   "mod.chiselsandbits.chisel.attempt.failed.no-valid-state-found": "The state you are trying to place is not valid.",
   "mod.chiselsandbits.chisel.attempt.failed.not-enough-bits": "You are not holding enough %s bits.",
-  "mod.chiselsandbits.chisel.attempt.failed.targeted-block-not-chiselable": "The targeted block is not chiselable."
+  "mod.chiselsandbits.chisel.attempt.failed.targeted-block-not-chiselable": "The targeted block is not chiselable.",
+  "mod.chiselsandbits.command.fill.completed": "Successfully completed the fill command.",
+  "mod.chiselsandbits.command.give.blockstate.not-chiselable": "The blockstate is not chiselable.",
+  "mod.chiselsandbits.default-chiseled-block-item.name": "Chiseled Block",
+  "mod.chiselsandbits.pattern.cutting.across.axis.x": "Cutting across the X axis.",
+  "mod.chiselsandbits.pattern.cutting.across.axis.y": "Cutting across the Y axis.",
+  "mod.chiselsandbits.pattern.cutting.across.axis.z": "Cutting across the Z axis."
 }
