Made chiseled block and pattern placement colors configurable.

--- a/common/src/main/resources/assets/chiselsandbits/lang/en_us.json
+++ b/common/src/main/resources/assets/chiselsandbits/lang/en_us.json
@@ -331,6 +331,10 @@
   "mod.chiselsandbits.config.settings.comment": "Gameplay settings",
   "mod.chiselsandbits.config.settings.bit-bag.comment": "Bit-Bag settings",
   "mod.chiselsandbits.config.settings.bit-bag.invert-durability-bar-indication.comment": "Should the durability bar display the emptiness of the bag instead of the fullness?",
+  "mod.chiselsandbits.config.settings.placement-color.comment": "Configures the color of chiseled block and pattern placement previews",
+  "mod.chiselsandbits.config.settings.placement-color.success.comment": "The color of successful placement",
+  "mod.chiselsandbits.config.settings.placement-color.not-fitting.comment": "The color of failure due to the block not fitting",
+  "mod.chiselsandbits.config.settings.placement-color.missing-bits-or-space.comment": "The color of failure due to a lack of bits or space",
   "mod.chiselsandbits.config.settings.chiseling-previews.comment": "Configures the chiseling and placement previews.",
   "mod.chiselsandbits.config.settings.chiseling-previews.default.comment": "Configures the default chiseling and placement preview.",
   "mod.chiselsandbits.config.settings.chiseling-previews.default.colors.comment": "Configures the colors of the outlines that the chiseling and placement preview have.",
