--- a/common/src/main/resources/assets/chiselsandbits/lang/en_us.json
+++ b/common/src/main/resources/assets/chiselsandbits/lang/en_us.json
@@ -153,18 +153,18 @@
   "mod.chiselsandbits.help.shiftdetails": "<Hold Shift For Details>",
   "mod.chiselsandbits.help.empty": "Empty",
   "mod.chiselsandbits.help.filled": "Filled",
-  "mod.chiselsandbits.help.chiseled_block": "{} to place\n{} to ignore block grid\nMouse Wheel to cycle placement rotation.",
+  "mod.chiselsandbits.help.chiseled_block": "%s to place\n%s to ignore block grid\nMouse Wheel to cycle placement rotation.",
   "mod.chiselsandbits.help.bit_bag": "Automatically re-stock, and store bits.",
-  "mod.chiselsandbits.help.wrench": "{} blocks to rotate.",
-  "mod.chiselsandbits.help.bit": "{} to chisel\n{} to place\nUse {} to display menu.",
-  "mod.chiselsandbits.help.positiveprint": "{} to write\n{} to chisel/place or Craft with bits/bags.\nMouse Wheel to cycle rotation\nUse {} to display menu.",
-  "mod.chiselsandbits.help.negativeprint": "{} to write\n{} to chisel.\nMouse Wheel to cycle rotation.",
-  "mod.chiselsandbits.help.mirrorprint": "{} the face you wish to mirror from\nCraft with positive/negative design to transfer.",
-  "mod.chiselsandbits.help.chisel": "{} to chisel\nUse {} to display menu.",
+  "mod.chiselsandbits.help.wrench": "%s blocks to rotate.",
+  "mod.chiselsandbits.help.bit": "%s to chisel\n%s to place\nUse %s to display menu.",
+  "mod.chiselsandbits.help.positiveprint": "%s to write\n%s to chisel/place or Craft with bits/bags.\nMouse Wheel to cycle rotation\nUse %s to display menu.",
+  "mod.chiselsandbits.help.negativeprint": "%s to write\n%s to chisel.\nMouse Wheel to cycle rotation.",
+  "mod.chiselsandbits.help.mirrorprint": "%s the face you wish to mirror from\nCraft with positive/negative design to transfer.",
+  "mod.chiselsandbits.help.chisel": "%s to chisel\nUse %s to display menu.",
   "mod.chiselsandbits.help.bitsaw": "Craft with Blocks or Chiseled blocks\nCut along any of the 3 axis.",
   "mod.chiselsandbits.help.bittank.empty": "Fill with fluid and extract bits.\nCurrently empty.",
-  "mod.chiselsandbits.help.bittank.full": "Fill with fluid and extract bits.\n Contains: {}.\n {} Bits remaining.",
-  "mod.chiselsandbits.help.tape_measure": "{} and drag to measure, again {} to save\n{} to clear\nUse {} to display menu.",
+  "mod.chiselsandbits.help.bittank.full": "Fill with fluid and extract bits.\n Contains: %s.\n %s Bits remaining.",
+  "mod.chiselsandbits.help.tape_measure": "%s and drag to measure, again %s to save\n%s to clear\nUse %s to display menu.",
   "mod.chiselsandbits.help.magnifying_glass": "Hover over block to check if compatible.",
   "mod.chiselsandbits.help.chiseled_block.long": "Left-click to place the block. Sneak while placing to ignore block grid. Shift + Mouse Wheel to cycle placement rotation.",
   "mod.chiselsandbits.help.bit_bag.long": "Automatically re-stocks, and store bits when you exceed or go under a stack in your inventory.\n\nCraft with any dye to color.",
