Fixed remaining translation errors by correcting lang file typo, and by changing two entries from camelCase to kebab-case.

--- a/common/src/main/resources/assets/chiselsandbits/lang/en_us.json
+++ b/common/src/main/resources/assets/chiselsandbits/lang/en_us.json
@@ -327,7 +327,7 @@
   "mod.chiselsandbits.config.performance.lighting.extract-lighting-values-from-blockstates.comment": "Should C&B pull lighting values from blockstates.",
   "mod.chiselsandbits.config.performance.lighting.extract-lighting-values-from-faces.comment": "Should C&B pull lighting values from model faces.",
   "mod.chiselsandbits.config.performance.model-building.comment": "Options related to the building of the chiseled block models.",
-  "mod.chiselsandbits.config.performance.model-building.thead-count.comment": "How many CPU threads should be used to build models?",
+  "mod.chiselsandbits.config.performance.model-building.thread-count.comment": "How many CPU threads should be used to build models?",
   "mod.chiselsandbits.config.settings.comment": "Gameplay settings",
   "mod.chiselsandbits.config.settings.bit-bag.comment": "Bit-Bag settings",
   "mod.chiselsandbits.config.settings.bit-bag.invert-durability-bar-indication.comment": "Should the durability bar display the emptiness of the bag instead of the fullness?",
@@ -348,8 +348,8 @@
   "mod.chiselsandbits.config.settings.selected-tool-mode-icons.renderer.comment": "Sets which tool mode icon renderer is in use. Currently C&B provides: `chiselsandbits:group` (Render the group icon in the top right corner) and `chiselsandbits:noop` (No icon) as options.",
   "mod.chiselsandbits.config.settings.invert-pick-block-behaviour.comment": "Configures if the block picking behavior should be inverted. When true then a normal middle-click will get the full chiseled block and a shift-middle-click gets the bit. If this is false then the behaviours are swapped.",
   "mod.chiselsandbits.config.settings.clipboard.size.comment": "The amount of blocks to keep in the creative clipboard.",
-  "mod.chiselsandbits.config.settings.clipboard.addBrokenBlocks.comment": "When set to true this adds broken chiseled blocks to the creative clipboard.",
-  "mod.chiselsandbits.config.settings.clipboard.addPickedBlocks.comment": "When set to true this adds picked chiseled blocks to the creative clipboard.",
+  "mod.chiselsandbits.config.settings.clipboard.add-broken-blocks.comment": "When set to true this adds broken chiseled blocks to the creative clipboard.",
+  "mod.chiselsandbits.config.settings.clipboard.add-picked-blocks.comment": "When set to true this adds picked chiseled blocks to the creative clipboard.",
   "mod.chiselsandbits.config.style.comment": "Configures the different gameplay style options.",
   "mod.chiselsandbits.config.style.bit-size.comment": "Configures the size of a single bit, relative to one block.",
   "mod.chiselsandbits.config.performance.saving.thread-count.comment": "The thread count used during saving and compressing of data from chiseled block entity.",
