Cull Test Improvements for complex neighbors
- fixes #983, #985
- Improves the Cull Test behaviors for non-solid occluding neighbors.  This is mostly pulling more out of Block#shouldRenderFace, but a) in an easier-to-use format given buildFaceRegion's existing format, and b) bypasses some of the caching that makes sense in other contexts, but is likely to get stomped by even a small amount of Chiseled blocks.
- Adds a missing keybind translation text key.

--- a/common/src/main/resources/assets/chiselsandbits/lang/en_us.json
+++ b/common/src/main/resources/assets/chiselsandbits/lang/en_us.json
@@ -294,6 +294,7 @@
   "mod.chiselsandbits.keys.key.undo": "Undo last chiseling operation",
   "mod.chiselsandbits.keys.key.redo": "Redo last undone chiseling operation",
   "mod.chiselsandbits.keys.key.zoom": "Zoom with monocle",
+  "mod.chiselsandbits.keys.key.reset-caches": "Reset Chisels&Bits caches",
   "mod.chiselsandbits.test": "Placeholder text during development",
   "mod.chiselsandbits.pattern.modification.group.mirror": "Mirror",
   "mod.chiselsandbits.pattern.modification.group.rotate": "Rotate",
