Update to handle fabric Scena

--- a/core/src/main/resources/assets/chiselsandbits/lang/en_us.json
+++ b/core/src/main/resources/assets/chiselsandbits/lang/en_us.json
@@ -47,6 +47,7 @@
   "item.chiselsandbits.sealant": "Sealant",
   "item.chiselsandbits.unseal": "Sealant remover",
   "item.chiselsandbits.monocle": "Monocle",
+  "item.chiselsandbits.wrench": "Wrench",
   "mod.chiselsandbits.bitoption.place": "Place",
   "mod.chiselsandbits.bitoption.replace": "Replace",
   "mod.chiselsandbits.creative-tab.clipboard.name": "Chisels & Bits Clipboard",
