Fix a threading issue when loading a single player world. Switch to copy on write backend storage for the state entry storage bit set, levering the batch mechanics of block entities. Add line chisel mode Add drawn chisel group. Add wall chisel mode Fix an issue where the useBlock and useItem state where not respected on forge.

--- a/core/src/main/resources/assets/chiselsandbits/lang/en_us.json
+++ b/core/src/main/resources/assets/chiselsandbits/lang/en_us.json
@@ -77,7 +77,11 @@
   "mod.chiselsandbits.chiselmode.cube_medium": "Medium",
   "mod.chiselsandbits.chiselmode.cube_large": "Large",
   "mod.chiselsandbits.chiselmode.cube_full": "Full Block",
-  "mod.chiselsandbits.chiselmode.drawn_region": "Drawn Region",
+  "mod.chiselsandbits.chiselmode.drawn_cube": "Drawn Cube",
+  "mod.chiselsandbits.chiselmode.drawn_line": "Drawn Line",
+  "mod.chiselsandbits.chiselmode.drawn_wall_thin": "Drawn wall (3 x 1)",
+  "mod.chiselsandbits.chiselmode.drawn_wall_medium": "Drawn wall (5 x 1)",
+  "mod.chiselsandbits.chiselmode.drawn_wall_fat": "Drawn wall (7 x 1)",
   "mod.chiselsandbits.chiselmode.same_material": "Same Material",
   "mod.chiselsandbits.chiselmode.sphere_small": "1/4",
   "mod.chiselsandbits.chiselmode.sphere_medium": "1/2",
@@ -106,7 +110,11 @@
   "mod.chiselsandbits.chiselmode.multiline.cube_medium": "Medium",
   "mod.chiselsandbits.chiselmode.multiline.cube_large": "Large",
   "mod.chiselsandbits.chiselmode.multiline.cube_full": "Full\nBlock",
-  "mod.chiselsandbits.chiselmode.multiline.drawn_region": "Drawn\nRegion",
+  "mod.chiselsandbits.chiselmode.multiline.drawn_cube": "Drawn\nCube",
+  "mod.chiselsandbits.chiselmode.multiline.drawn_line": "Drawn\nLine",
+  "mod.chiselsandbits.chiselmode.multiline.drawn_wall_thin": "Drawn Wall\nThin: 3 x 1",
+  "mod.chiselsandbits.chiselmode.multiline.drawn_wall_medium": "Drawn Wall\nMedium: 5 x 1",
+  "mod.chiselsandbits.chiselmode.multiline.drawn_wall_fat": "Drawn Wall\nFat: 7 x 1",
   "mod.chiselsandbits.chiselmode.multiline.same_material": "Same\nMaterial",
   "mod.chiselsandbits.chiselmode.multiline.sphere_small": "1/4",
   "mod.chiselsandbits.chiselmode.multiline.sphere_medium": "1/2",
