--- a/core/src/main/resources/assets/chiselsandbits/lang/en_us.json
+++ b/core/src/main/resources/assets/chiselsandbits/lang/en_us.json
@@ -382,6 +382,9 @@
   "mod.chiselsandbits.chisel.attempt.failed.targeted-block-not-chiselable": "The targeted block is not chiselable.",
   "mod.chiselsandbits.command.fill.completed": "Successfully completed the fill command.",
   "mod.chiselsandbits.command.give.blockstate.not-chiselable": "The blockstate is not chiselable.",
+  "mod.chiselsandbits.command.fill.in-progress": "Filling in progress. Completed %s procent out of %s.",
+  "mod.chiselsandbits.command.fill.to-fill": "Started filling the area. %s bits to fill.",
+  "mod.chiselsandbits.command.fill.processing-block-updates": "Filling completed. Processing block updates.",
   "mod.chiselsandbits.default-chiseled-block-item.name": "Chiseled Block",
   "mod.chiselsandbits.pattern.cutting.across.axis.x": "Cutting across the X axis.",
   "mod.chiselsandbits.pattern.cutting.across.axis.y": "Cutting across the Y axis.",
